--- a/blog/0017.md
+++ b/blog/0017.md
@@ -9,6 +9,6 @@ Over the pass and down across the famous bridge I sped. Losing so much altitude,
 
 Along Donner Lake and into Truckee I had a hard time finding any cafes open. Eventually I spotted a classic American diner by the railroad so went in there for food and drink. I discovered that "baked beans" weren't the same as the Heinz ones we have back in the UK. I made use of the free wifi to Skype back home and checked in with someone who'd offered to host me. 
 
-A couple of months before my trip I'd been planning a route through this part of the country and discovered a bike trail being planned. I'd emailed the lady in charge of that to ask for advice for avoiding the freeway and she put me in touch with a local, Chris Askin. We'd exchanged emails and Chris had offered me a room for the night when I passed through.
+A couple of months before my trip I'd been planning a route through this part of the country and discovered a bike trail being planned. I'd emailed the lady in charge of that to ask for advice for avoiding the freeway and she put me in touch with a local, Chris. We'd exchanged emails and Chris had offered me a room for the night when I passed through.
 
 I left the diner and headed over to Chris's house. He welcomed me in, offered me a very welcome shower and then we went and got Mexican food. Back at his house we had ice-cream (bring on the calories), had a beer, watched a film, and chatted with his son who was doing a dissertation on Formula 1. Chris also has a penny farthing and he let me wheel it around his garage. Unfortunately I couldn't ride it as it was dark outside and he lived on a hill so that would have been unwise. Chris was a brilliant host.
