--- a/blog/0018.md
+++ b/blog/0018.md
@@ -13,12 +13,12 @@ We hit the Pyramid-Tahoe trail and I had to get off and push my bike a few more 
 
 ![landscape](https://www.flickr.com/photos/astronomyblog/14048263026/ "Periodic table of coffee")
 
-Here I was in Reno. The sum total of my knowledge of Reno came from the movie Sister Act. I couldn't see any nuns in helicopters though.
+Here I was in Reno. Casino city. The sum total of my knowledge of Reno came from the movie Sister Act. I couldn't see any nuns in helicopters though.
 
 ![landscape](https://www.flickr.com/photos/astronomyblog/14068169961/ "Reno: The Biggest Little City in the World")
 
-Chris had put a plea out on Facebook last night asking if anyone would host me in Reno. The owner of the Reno Bike Project - Noah - had kindly offered. Chris left me at the bike shop where I bought a new light and some lubricant. Noah gave me directions to his house and met me there. I said I needed a camping stove (I couldn't really bring mine from the UK) so he sent me off in the direction of a REI. The shop had everything and I ended up buying a sleeping bag liner (adds 3.6 degrees C for the cold desert nights), a rear-view mirror, some dehydrated camping food, suncream (SPF 50), a sun hat, spare breaks and granola bars. I spent far too much.
+Chris had put a plea out on Facebook last night asking if anyone would host me in Reno. The owner of the Reno Bike Project - Noah - had kindly offered. Chris left me at the bike shop where I bought a new light and some lubricant. Noah gave me directions to his house and we met there a little while later. I said I needed a camping stove (I couldn't really bring mine from the UK) so he sent me off in the direction of a REI. The shop had everything you could want for an outdoors trip. I ended up buying a sleeping bag liner (adds 3.6 degrees C for the cold desert nights), a rear-view mirror, some dehydrated camping food, suncream (SPF 50), a sun hat, spare breaks and granola bars. I spent far too much money.
 
-Once back at Noah's, despite the fact he'd had a 12 hour day, he took me to a local pub to get food. He also told me about a website - warmshowers - specifically for long distance cyclists.
+Once back at Noah's, despite the fact he'd had a 12 hour work day, he took me to a local pub to get food. He also told me about a website - warmshowers - that is specifically for long distance cyclists.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14048245446/ "Donner Pass Bridge")
+![portrait](https://www.flickr.com/photos/astronomyblog/16895983768/ "Noah")
