--- a/blog/0004.md
+++ b/blog/0004.md
@@ -5,4 +5,4 @@ Date:	2014-04-21T00:38+PDT
 
 I've been in San Francisco for a few days now. On Friday I rode over the Golden Gate Bridge and up a hill to an old artillery position. I say old, but the artillery position was actually built after Thomas Stevens left San Francisco in 1884. The Golden Gate Bridge dates from 1937 so Stevens never saw it (and died two years before it was built).
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13944266213/ "The famous Golden Gate Bridge")
+![panorama](https://farm3.staticflickr.com/2911/14634096899_995a08aca4_b.jpg "The famous Golden Gate Bridge")
