--- a/blog/0009.md
+++ b/blog/0009.md
@@ -17,4 +17,4 @@ I asked Jim if I could buy a kickstand and the aforementioned customer chipped i
 
 As Jim fitted the kickstand we had a little chat about my trip, his business and other long distance cyclists who'd stopped at his store. It turns out Jim is on the board that plans the Solano County bike routes. I praised him for the off-road sections and the number and quality of the bike lanes. He told me that my next stop - Davis - was the most bike friendly city in the USA and gave me directions for getting there. He threw in some diluting energy gel packs to see me on my way. It was wonderful to meet generous people like Jim and his customer and they buoyed my spirits for the rest of the day.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14002372904/ "Fisk's Cyclery")
+![portrait](https://farm8.staticflickr.com/7117/14002372904_a9b502a7e5_z.jpg "Fisk's Cyclery")
