--- a/blog/0011.md
+++ b/blog/0011.md
@@ -5,24 +5,24 @@ Date:	2014-04-25T21:40+PDT
 
 I had a late start as I had to find AA batteries for my GPS as my rechargables were all dead. I followed the imaginatively named __American River__ where I met a cyclist who took my photo for me.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/13998756612/ "Me by the American River")
+![portrait](https://farm8.staticflickr.com/7002/13998756612_2497b1fb9c_z.jpg "Me by the American River")
 
 After Sacramento I headed towards the mountains following the railroad lines on frontage roads as much as possible. I didn't know what a "frontage road" was until planning for this trip. They tend to be roads that run alongside railroad lines or freeways. They are generally quiet, not brilliantly maintained, and often the only non-motorway option. They are usually called "Frontage Road" too in the standard, American, no-nonsense naming approach.
 
 I reached Rocklin in the afternoon and, after visiting the local Chamber of Commerce (these are the equivalent of tourist information offices), found a motel. At the front desk I met Lalit who quickly brought his colleague Amit to meet me on hearing my story. I asked if I could take their picture and they asked if they could take pictures with me to share on their Facebook pages.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13998761052/ "Amit and Lalit")
+![landscape](https://farm3.staticflickr.com/2914/13998761052_34b85ee4b3_z.jpg "Amit and Lalit")
 
 The next morning I headed out of town in the rain. The rain was to continue all day without much let-up. On leaving Rocklin you find yourself in the foothills and on your slow climb up to the mountains. On Taylor road I spotted a combination bike/coffee shop. I didn't need anything for my bike but mid-morning refreshment for the rider was in order. Inside I met Frank Nute; a local man whose family had lived in the area for years. In fact the road was apparently named after Frank's grandfather. Frank also said that his family geneology went back to King Canute. It constantly amazes me how far back in their family histories Americans can go. Most Brits are hard pressed to go back to the 19th century. The coffee shop was a fairly recent addition and seemed to be attracting a good amount of local custom. I really liked the bike-themed decorations.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14048227236/ "Frank - descendent of King Canute")
+![portrait](https://farm8.staticflickr.com/7038/14048227236_49f2b3872a_z.jpg "Frank - descendent of King Canute")
 
 Following some directions from Frank I headed on up to Auburn. Just before Auburn the bike lane suddenly ends with freeway (I-80) as the only direction to go. I spent a few minutes wondering if I'd gone wrong but after being passed unhindered by a highway patrol car and working out that a bike in a yellow diamond was a warning to motorists, rather that a prohibition sign, I gingerly joined the freeway shoulder. As I went around the corner I saw a sign saying bikes were prohibited and my heart sank. However, just behind it was a sign saying bikes must take the next exit. I did take the exit as it went into historic Auburn. That was my first, but not last time on a freeway.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14071452775/ "")
+![landscape](https://farm8.staticflickr.com/7334/14071452775_5ca9aa3c7c_z.jpg "")
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14068254081/ "")
+![landscape](https://farm8.staticflickr.com/7322/14068254081_945f8599d2_z.jpg "")
 
 In Auburn I had a rather smaller crepe for lunch than I'd imagined from the price. That'll teach me for going to a fancy looking cafe. After I found the Auburn Museum where I spent a good hour or so chatting to the lady who worked (or volunteered) there and looking at the exhibits. One asked "what has happened to the American hat?" and had various suggestions from visitors next to it.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13884847788/ "Who killed the American hat? It wasn't me.")
+![landscape](https://farm6.staticflickr.com/5029/13884847788_09765e2f64_z.jpg "Who killed the American hat? It wasn't me.")
