--- a/blog/0013.md
+++ b/blog/0013.md
@@ -5,12 +5,12 @@ Date:	2014-04-26T21:58+PDT
 
 I had a rest day in Colfax and used it to visit the Museum and the Chamber of Commerce. At the museum I met Irene who was volunteering that day. They had a collection of all sorts of bits and bobs donated by local people. Irene showed me their collection of knitted Presidents going all the way up to Obama wearing a Hawaian shirt. Conversationally, I asked if that was because he was from Hawaii. Irene replied with "if you believe that" indicating that she might agree with some of the "birther" people I've heard about.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14071443085/ "Colfax")
+![portrait](https://farm6.staticflickr.com/5508/14071443085_27afcc99a3_z.jpg "Colfax")
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14048332586/ "The knitted Presidents of the United States")
+![landscape](https://farm3.staticflickr.com/2914/14048332586_b4b77f31ac_z.jpg "The knitted Presidents of the United States")
 
 As Irene was showing me old maps of the railroads across the US, we were joined by Eric. Eric had an amazing beard and a lot of stories and advice. He seemed to know spots to camp around Colfax and warned me about cougars and bears. He told me that the first you'd know of a cougar was it sinking its teeth into you. He also knew someone who'd fought a mountain lion and told me they were all through Nevada, Utah, Wyoming and Nebraska too. Eric specifically warned me about the people of Winnemucca which he seemed to think was the most dangerous part of my trip. He said they lynched people from trains in Winnemucca. None of this helped my confidence for the days ahead. In fact Eric, combined with Todd from a few days earlier, had nearly put me off the whole trip.
 
 They hadn't quite though and I found some waterproof trousers in a thrift shop. They were probably 20 sizes too big for me but I didn't want another day freezing and wet so they were better than nothing.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14071908834/ "Irene and Eric")
+![landscape](https://farm8.staticflickr.com/7372/14071908834_c916fa0770_z.jpg "Irene and Eric")
