--- a/blog/0015.md
+++ b/blog/0015.md
@@ -15,20 +15,20 @@ At Cisco Grove I finally left the freeway and stopped for a toilet break. Here I
 
 Over the freeway I joined up with the old 40 and parts of the [Lincoln Highway](https://en.wikipedia.org/wiki/Lincoln_Highway). The road was the first trans-continental highway for cars and out in the west followed the railroad that had gone before it. Later, the interstate system came in following a very similar route. There were old tourist shops that had been abandoned since the I-80 cut through the area. The trees were thinning out with altitude so I was less worried abut cougars hiding in them. I did sing though for the bears and my own entertainment. I sang some __Ford Econoline__, __Climb Every Mountain__ and a medly of mountain related bits of songs I could remember.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14071820284/ "Old tourist attractions on the Lincoln Highway")
+![landscape](https://farm3.staticflickr.com/2903/14071820284_6dff42e4e2_z.jpg "Old tourist attractions on the Lincoln Highway")
 
-![portrait](https://www.flickr.com/photos/astronomyblog/13884821729/ "Old Lincoln Highway")
+![portrait](https://farm8.staticflickr.com/7042/13884821729_ac85e47824_z.jpg "Old Lincoln Highway")
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14091487353/ "River near Big Bend")
+![portrait](https://farm6.staticflickr.com/5279/14091487353_ebbe5fc5da_z.jpg "River near Big Bend")
 
 In Big Bend I saw a really old section of Lincoln Highway as well as beautiful sections of stream. Still upwards went the road. I started counting off every 500ft of ascent and then every 100ft. Somewhere around 6500ft I was passed by a "Lowe's" van. Having become a little superspicious in the mountains I took this as a good omen.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14071891094/ "Lowe's van")
+![landscape](https://farm6.staticflickr.com/5093/14071891094_70263652d0_z.jpg "Lowe's van")
 
 I reached the "Summit Hotel" but was disappointed to see that I wasn't at the top yet. Along at Soda Springs I saw a little museum so back tracked to have a look. Inside I met Norm Sayler who knew everything about Donner Summit. He showed me old photos of a 1903 bicycle trip over the summit by two unknown gentlemen. They had safety bikes by then so no penny farthings. Norm also gave me a free espresso possibly because he was so happy to actually have a visitor who was showing some interest. He had previously owned the summit ski resort and had, unknowningly at the time, let the inventor of the mountain bike use his ski lift to go up and down all day to test it.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14071411725/ "Norm Sayler")
+![portrait](https://farm3.staticflickr.com/2922/14071411725_6630a3ed0a_z.jpg "Norm Sayler")
 
 I left Norm's museum with the advice to look for a tunnel - Tunnel 6 - as I headed over the summit as Stevens probably went through it. He also told me to keep an eye out for ancient petroglyphs but I wasn't eagle eyed enough to spot them.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/13884806768/ "Tunnel 6")
+![portrait](https://farm3.staticflickr.com/2904/13884806768_0589d5acd7_z.jpg "Tunnel 6")
