--- a/blog/0016.md
+++ b/blog/0016.md
@@ -5,8 +5,8 @@ Date:	2014-04-28T15:10+PDT
 
 After peering into the old railroad tunnel that Thomas Stevens had walked through, I headed on towards the famous Donner Pass. As I neared it I dragged my bike off the road, up through the snow and onto some rocks to take in the view. And what a view it was!
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14091465283/ "At Donner Summit with Donner Lake in the background")
+![landscape](https://farm8.staticflickr.com/7445/14091465283_748bca3d7f.jpg "At Donner Summit with Donner Lake in the background")
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13884785649/ "Donner Lake")
+![panorama](https://farm3.staticflickr.com/2928/14634829149_8fb7a82813_b.jpg "Donner Lake")
 
 It was tremendous. I'd got here by my own effort. This was the longest and hardest bike trip I'd ever done and the cold, the tiredness, the fear, and the slog had all been worth it for this.
