--- a/blog/0017.md
+++ b/blog/0017.md
@@ -5,7 +5,7 @@ Date:	2014-04-28T20:00+PDT
 
 Over the pass and down across the famous bridge I sped. Losing so much altitude, so quickly, left me hoping my break pads would last. How Stevens did all this on a penny farthing amazes me more as the trip progresses. 
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14048245446/ "Donner Pass Bridge")
+![portrait](https://farm6.staticflickr.com/5505/14048245446_73e7e291f6_z.jpg "Donner Pass Bridge")
 
 Along Donner Lake and into Truckee I had a hard time finding any cafes open. Eventually I spotted a classic American diner by the railroad so went in there for food and drink. I discovered that "baked beans" weren't the same as the Heinz ones we have back in the UK. I made use of the free wifi to Skype back home and checked in with someone who'd offered to host me. 
 
