--- a/blog/0014.md
+++ b/blog/0014.md
@@ -7,14 +7,14 @@ The next day I awoke full of nerves. I still had Eric's dire warnings of cougars
 
 I chose to ignore the directions of my satnav routing and follow the Colfax Chamber of Commerce's paper-based bike route advice and go along Lake Rollins Road. At Lake Rollins I saw a couple of people who I struck up a conversation with. They were Lisa and Miles who'd lived around the area for years and Miles said he'd been hiking in the woods without any problems. Lisa also gave me a small bottle of mace and showed me how to use it. I suspect that human strength mace may not be much use against a mountain lion but, after my conversation with Lisa and Miles, I felt a lot calmer about the cougars. We exchanged details and I waved my goodbyes. 
 
-![portrait](https://www.flickr.com/photos/astronomyblog/14050322254/ "Waving goodbye to Lisa and Miles. Image from Lisa.")
+![portrait](https://farm6.staticflickr.com/5557/14050322254_17315e7274_z.jpg "Waving goodbye to Lisa and Miles. Image from Lisa.")
 
 The road to Alta - my destination for the night - wasn't far but it was the last good spot to stay for miles as the campground at Cisco Grove said they had a foot of snow and didn't sound like they were going to bother clearing it. On the way to Alta, I saw Lisa and Miles a few more times. I'm not sure if they were just out for a drive around the area or were checking up on me but I certainly appreciated seeing them each time. 
 
 In Alta I found the B&B I was staying in and then went to get dinner. Unfortunately that meant going 4 miles back down the road and losing 600ft of altitude which I'd have to regain later. I hope my dinner provided more calories than I expended to get it!
 
-The landlady of the B&B was called Joanne and she was brilliant. She'd spent time in the Soviet Union when she was in college. Apparently the Russians had separated off the farm kids from the college trip to ask them all about American farms. We talked into the evening over some red wine. She told me about one local who got drunk, tied his dogs to the bumper of someone else's truck at the grocery store only to find the truck and dog gone when he came back out. Joanne was a wonderful host.
+The landlady of the B&B was called Joanne and she was brilliant. We talked into the evening over some red wine. She told me about one local who got drunk, tied his dogs to the bumper of someone else's truck at the grocery store only to find the truck and dog gone when he came back out. Joanne was a wonderful host.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/13884734517/ "View across the valley to the railroad line")
+![portrait](https://farm8.staticflickr.com/7064/13884734517_bd50d696b0_z.jpg "View across the valley to the railroad line")
 
-![portrait](https://www.flickr.com/photos/astronomyblog/13884825707/ "The wonderful Joanne")
+![portrait](https://farm6.staticflickr.com/5293/13884825707_364b9680c6_z.jpg "The wonderful Joanne")
