--- a/blog/0018.md
+++ b/blog/0018.md
@@ -3,22 +3,22 @@ Title:	The biggest little city in the world
 Date:	2014-04-29T22:00+PDT
 ---
 
-Chris was going to show me the way to Reno that avoided the freeway but that meant we had to get an early start so at 7am we set off on a route which met up with old parts of Lincoln Highway. We crossed a few tressel railway bridges and the going was tough in the loose rock with my heavy back-end. At one point I fell over and later discovered I'd lost my rear light.
+Chris was going to show me the way to Reno that avoided the freeway but he needed to get to work at a reasonable time so that meant an early start. We set off at 7am on a route which met up with old parts of Lincoln Highway. We crossed a few tressel railway bridges and the going was tough in the loose rock with my heavy back-end. At one point I fell over and later discovered I'd lost my rear light. In this fall my Garmin GPS turned itself off and I lost the track through the Truckee Canyon.
 
 This morning's route was probably the closest to Stevens' route I've been. There were even moments trundling along the timbers of the railroad track to cross the Truckee River.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13884754217/ "Chris")
+![landscape](https://farm6.staticflickr.com/5536/13884754217_83ab46c20c_z.jpg "Chris")
 
 We hit the Pyramid-Tahoe trail and I had to get off and push my bike a few more times. As we crossed into Nevada we hit paved roads. A few miles later, at about 10.30am we stopped by the river in Reno at the Hub coffee shop. I was impressed by the iPad till that displayed a periodic table of drinks on it.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14048263026/ "Periodic table of coffee")
+![landscape](https://farm3.staticflickr.com/2911/14048263026_0f8ffa8235_z.jpg "Periodic table of coffee")
 
 Here I was in Reno. Casino city. The sum total of my knowledge of Reno came from the movie Sister Act. I couldn't see any nuns in helicopters though.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14068169961/ "Reno: The Biggest Little City in the World")
+![landscape](https://farm3.staticflickr.com/2908/14068169961_06d2881c40_z.jpg "Reno: The Biggest Little City in the World")
 
 Chris had put a plea out on Facebook last night asking if anyone would host me in Reno. The owner of the Reno Bike Project - Noah - had kindly offered. Chris left me at the bike shop where I bought a new light and some lubricant. Noah gave me directions to his house and we met there a little while later. I said I needed a camping stove (I couldn't really bring mine from the UK) so he sent me off in the direction of a REI. The shop had everything you could want for an outdoors trip. I ended up buying a sleeping bag liner (adds 3.6 degrees C for the cold desert nights), a rear-view mirror, some dehydrated camping food, suncream (SPF 50), a sun hat, spare breaks and granola bars. I spent far too much money.
 
 Once back at Noah's, despite the fact he'd had a 12 hour work day, he took me to a local pub to get food. He also told me about a website - warmshowers - that is specifically for long distance cyclists.
 
-![portrait](https://www.flickr.com/photos/astronomyblog/16895983768/ "Noah")
+![portrait](https://farm9.staticflickr.com/8739/16895983768_6e7b9d71e0_z.jpg "Noah")
