Update image locations

--- a/blog/0003.md
+++ b/blog/0003.md
@@ -11,16 +11,16 @@ After security I bumped into another person clutching a bicycle helmet. That isn
 
 On the plane I talked to a lovely Irish couple - Noel and Peggy - from north of Dublin. They were off to visit their son and attend their grandson's confirmation. I had great conversations with Peggy and she told me about [Dervla Murphy](http://dervlamurphy.com/) who as travelled all over on a bike. At SFO I reclaimed my bike after getting excited telling the story of Thomas Stevens to the immigration official. I rebuilt my bike - pedals, front wheel, tyres - and filled up my water bottles. I was ready to set out into America.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13944643064/ "Bike in the CTC bike bag")
+![landscape](https://farm4.staticflickr.com/3780/13944643064_5ec5a212e0_z.jpg "Bike in the CTC bike bag")
 
 I rode off up the road from outside Arrivals which then merged with another road and turned a corner. At that point it became apparent that I was at second floor (third floor in American) level and was heading towards a massive Californian freeway with no exit. LA may be a "great big freeway" but it seemed San Francisco was one too. I wasn't going forward. This was my first road in America. My first time cycling on the right-hand-side and I was pretty sure the freeway would be illegal on a bike. I got off my bike and pushed it back along the hard shoulder to the terminal building shaking. Outside Departures I found some airport workers on a smoking break who pointed me to the ground level where they said there was a normal road. When I got there I found a bike lane and escaped SFO safely.
 
 US roads can have many lanes and I was paranoid about being thrown onto the busy freeway again. I headed north and at points my Garmin routing took me over some steep hills entirely needlessly but the effort was rewarded by some nice views in the fading light.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13921121306/ "San Francisco from the top of a hill I needn't have cycled up")
+![landscape](https://farm3.staticflickr.com/2932/13921121306_fa2ecd8fd8_z.jpg "San Francisco from the top of a hill I needn't have cycled up")
 
 I briefly chatted to another cyclist at a stop light who also had a yellow Ortleib classic pannier. She told me the motorists in San Francisco were terrible. I said that in the couple of hours I'd been here they were far more polite and courteous than the drivers in London that morning.
 
 I arrived at the hostel after sunset with a view of the Golden Gate Bridge. I checked in and had dinner in their little cafe. I was in bed by 10pm as it had been a very long day cycling on two continents.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/13944220225/ "View from the Youth Hostel at Fisherman's Wharf")
+![landscape](https://farm3.staticflickr.com/2903/13944220225_b734c9e5d0_z.jpg "View from the Youth Hostel at Fisherman's Wharf")
