Update image locations

--- a/blog/0002.md
+++ b/blog/0002.md
@@ -5,5 +5,4 @@ Date:	2014-04-16T15:30+PDT
 
 On the day before I flew to the US, I visited the grave of Thomas Stevens in East Finchley, London. When I arrived I asked a very helpful man who worked in the cemetery for directions to the grave. He said he'd been waiting for a journalist who was supposed to be visiting the grave that afternoon so it seems others have noted the anniversary of his trip. It was good to visit Thomas Stevens before setting out to recreate his trip across the US.
 
-
-![landscape](https://www.flickr.com/photos/astronomyblog/13944244613/ "Paying tribute at Thomas Stevens' grave in East Finchley")
+![landscape](https://farm8.staticflickr.com/7276/13944244613_df81902ab1_z.jpg "Paying tribute at Thomas Stevens' grave in East Finchley")
