--- a/blog/0005.md
+++ b/blog/0005.md
@@ -9,5 +9,4 @@ Before I left Half Moon Bay, Phil and I had a quick trip to the ocean so that I 
 
 Huge thanks to Eli, Amit, Dan FM and particularly Phil for being my welcome party to the US. They helped settle the nerves in advance of what is to come.
 
-
-![landscape](https://www.flickr.com/photos/astronomyblog/13998692852/ "Dipping my wheel in the Pacific ocean.")
+![landscape](https://farm6.staticflickr.com/5483/13998692852_2229e439fa_z.jpg "Dipping my wheel in the Pacific ocean.")
