--- a/blog/0006.md
+++ b/blog/0006.md
@@ -9,8 +9,8 @@ I started talking to Mary Anne whilst waiting for the 7.40am ferry (the timetabl
 
 The ferry ride flew by in good company. In Stevens's day the Bay was flecked with white sails. Those have been replaced by the solid red and black forms of giant container ships and the giant insect like structures for loading them. Mary Anne told me the loading cranes had been George Lucas's inspiration for the big walkers in Star Wars. You could see the resemblance.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14021906673/ "Looking back at the Bay")
+![landscape](https://farm8.staticflickr.com/7270/14021906673_1eeaeda16b_z.jpg "Looking back at the Bay")
 
 On disembarking I met Amit Kapadia - a friend from my time in astronomy. He was catching the ferry across to his work in San Francisco but had arranged to get the one that meant he could wave me off. To be waved off by a cyclist who lived in Oakland was very fitting. It meant the trip had begun. Well, almost.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14002336204/ "Oakland Jack London Ferry Terminal")
+![landscape](https://farm3.staticflickr.com/2897/14002336204_f83f41fde1_z.jpg "Oakland Jack London Ferry Terminal")
