--- a/blog/0008.md
+++ b/blog/0008.md
@@ -7,14 +7,14 @@ Today I awoke well after 7am despite having gone to sleep early. Cycling sure he
 
 I headed between gently undulating hills close to the Travis airforce base and stopped to get some freshly picked strawberries by the side of the road. I tried to engage the vendor in conversation but he was pretty monosyllabic so I gave up and carried on.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14002364044/ "Stopped to buy strawberries")
+![landscape](https://farm8.staticflickr.com/7203/14002364044_912010ac8a_z.jpg "Stopped to buy strawberries")
 
 On passing one field I was surprised to find that Americans literally grow cartons of milk. Well, they probably don't but it was very odd to see a huge field full of milk cartons presumably protecting seedlings underneath.
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14002364044/ "Milk Carton plants")
+![landscape](https://farm6.staticflickr.com/5262/13998729492_8343262405_z.jpg "Milk Carton plants")
 
 Whilst approaching the railroad my satnav tried to take me up a non-existent road (it was a dirt track with a gate) so I had to ignore it for a while and route myself. Thomas Stevens stopped in Elmira due to rain but I had beautiful blue skies and Elmira didn't look as though it had accommodation so I kept going with a brief stop to photograph an Amtrak passenger train (the last I'd see in a while).
 
-![landscape](https://www.flickr.com/photos/astronomyblog/14002377784/ "Elmira")
+![landscape](https://farm8.staticflickr.com/7072/14002377784_fc78facc1d_z.jpg "Elmira")
 
 I reached Dixon in time for lunch of BLT with avocado, fries and plenty of tomato ketchup. With an eye on the calories (getting as many as I could) I also had a chocolate lava cake. I called into the tourist information centre to ask about camp sites but it seems they aren't really something that exists outside of the national parks. If you have an RV you've plenty of options but if you have a bike and a tent you're stuck to motels. I got online and saw that the youth hostel in Sacramento had space for tonight (not tomorrow) so I decided that would be my destination for the night.
