--- a/blog/0024.md
+++ b/blog/0024.md
@@ -5,7 +5,7 @@ Date:	2014-05-03T22:00:00+PDT
 
 I woke, let my tent dry from the overnight condensation and headed off to the I-80. Unless there were obvious frontage roads, I was going to use the I-80 to Winnemucca. People back home had warned me about the massive trucks but I found the cross-country truckers in America to be very pleasant and courteous. Where they could they'd leave an entire lane of space as well as my comfortably big hard shoulder. The going was good and I just needed to avoid the debris from wheels that had blown out and bits of old snow chain that littered the sides of the freeway.
 
-I stopped at Subway near the Unionville services and was served by the genuinely friendly Britney. Before this trip I'd only ever visited bits of southern california and I wasn't keen on the tendency for fake friendliness behind fixed smiles with people asking you how you are and immediately walking off before you respond. Here however, Britney was generally interested and up for a conversation. She said she love to do this trip herself one day. Back in Half Moon Bay my friend Phil had given me three photography rules - get pictures of people I meet, of my bike and of me - so I dropped my normal British reserve and we took a selfie.
+I stopped at Subway near the Unionville services and was served by the genuinely friendly Britney. Before this trip I'd only ever visited bits of southern california and I wasn't keen on the tendency for fake friendliness behind fixed smiles with people asking you how you are and immediately walking off before you respond. Here however, Britney was generally interested and up for a conversation. She said she would love to do this trip herself one day. Back in Half Moon Bay my friend Phil had given me three photography rules - get pictures of people I meet, of my bike, and of me - so I dropped my normal British reserve and we took a selfie.
 
 ![landscape](https://farm8.staticflickr.com/7367/14216442083_d7dd71b148_z.jpg "Britney from Subway. I'm starting to get a bit beardy.")
 
