Add note about land speed records

--- a/blog/0026.md
+++ b/blog/0026.md
@@ -4,3 +4,5 @@ Date:	2014-05-05T18:00:00+PDT
 ---
 
 I had started to get a head cold during the night. As I'm ahead of Stevens, I decided to have a rest day. I spent it mostly in bed with medication, tea and bits of American TV. I felt very lazy.
+
+I was aware of Battle Mountain before I arrived. Being on a large, flat, plain, it is the location of the human-powered land speed record. In 2009 Canadian Sam Whittingham had come here and set the record at an incredible 82.8 mph. A few months before my trip, Sebastiaan Bowier from the Netherlands had been here and managed to get to 83.13 mph. I bet they didn't have panniers on their bikes.
