--- a/blog/0027.md
+++ b/blog/0027.md
@@ -7,16 +7,16 @@ It [had rained overnight](https://twitter.com/RTWbike/status/463704546393337858)
 
 I left Battle Mountain on the frontage road despite the warnings from the truckers I'd met a couple of days ago. It was actually very quiet.
 
-[!portrait](https://pbs.twimg.com/media/Bm99mLlCUAAPOP9.jpg "Nevada with snow on top")
+![portrait](https://pbs.twimg.com/media/Bm99mLlCUAAPOP9.jpg "Nevada with snow on top")
 
 I arrived at Dunphy to find a small RV park. There was a lady with a little Yorkshire terrier who I stopped to chat to. I told her I was from Yorkshire (whilst wearing my Tour de Yorkshire top). She told me it was her daughter, Shayne's RV park and that she was in the minimart if I needed anything. This really was a minimart. It was basically the size of a large garden shed. It had a single fridge and a very limited selection of chocolate. On the counter were two bananas. I asked Shayne if they were for sale. It turned out they were her lunch but upon hearing I was on a bicycle she kindly sold me one of them along with a drink and some chocolate. At that point we were interrupted by some genuine cowboys who came in to buy supplies. They had very cool cowboy hats. After they left I got chatting with Shayne and she decided to message her friend from the local mine to ask for advice for me about the route to Beowawe. I hung around for a few minutes chatting with her and her friend said it should be fine.
 
-[!portrait](https://farm3.staticflickr.com/2935/14009638229_72c571ebe6_c.jpg "Shayne at Dunphy minimart. She took a picture of me to add to Facebook.")
+![portrait](https://farm3.staticflickr.com/2935/14009638229_72c571ebe6_c.jpg "Shayne at Dunphy minimart. She took a picture of me to add to Facebook.")
 
 With good wishes from Shayne and the OK from her local friend, I set off towards Beowawe. The road took me under the freeway and then the landscape seemed to change. Compared to the past few days it was [vageuly reminiscent](https://twitter.com/RTWbike/status/463765513827385346) of the Lake District although the wildlife clearly wasn't.
 
-[!landscape](https://pbs.twimg.com/media/Bm-gRv1CcAAY0_d.jpg "Lake District or Nevada?")
+![landscape](https://pbs.twimg.com/media/Bm-gRv1CcAAY0_d.jpg "Lake District or Nevada?")
 
-[!landscape](https://farm8.staticflickr.com/7387/14009712417_a60da4dce5_z.jpg "Birds near Beowawe")
+![landscape](https://farm8.staticflickr.com/7387/14009712417_a60da4dce5_z.jpg "Birds near Beowawe")
 
 Beowawe itself was a small collection of ramshackle buildings. There wasn't much sign of life but I suspected eyes may be watching me and I moved on. My original route plan had me going back up to the freeway but it looked as though there was a road that followed the railroad and Google Maps suggested there were tracks. I still hadn't learned my lesson.
