To Palisade and Carlin

--- a/blog/0029.md
+++ b/blog/0029.md
@@ -21,6 +21,6 @@ If this had been the Lake District or North Wales there would have been a sheep 
 
 ![portrait](https://farm8.staticflickr.com/7407/14196318005_33a49d61e8_c.jpg "The ~800ft gulley I descended. I abandoned my bike about half way down.")
 
-At the bottom I realised that the Humboldt river was between me and the railroad. Glad of my waterproof Ortleib panniers I forded the river. I was soaked up to my chest. Up the bank on the other side I found a six foot barbed wire fence between me and the raised railroad. I decided my best bet was pitching my tent between the two so that the railroad and the fence afforded me some protection from wild animals. After all, it wasn't just cougars out there. There could be bears too. Up and over the fence I went. I pitched my tent. I then covered it in pulled up dead branches of sage brush. This was partially to hide it and partially to provide a bit more of a barrier than a thin tent wall. I cooked up some dehydrated packet food which tasted wonderful given what I'd been through. I changed out of the wet clothes into my spare merino top and my thermal trousers and bedded down for the night. I took out my camp knife and the can of mace to be ready.
+At the bottom I realised that the Humboldt river was between me and the railroad. Glad of my waterproof Ortleib panniers I forded the river. I was soaked up to my chest. Being bike less I couldn't [use it as a vaulting pole like Stevens](http://www.strudel.org.uk/blog/stevens/000026.shtml). Up the bank on the other side I found a six foot barbed wire fence between me and the raised railroad. I decided my best bet was pitching my tent between the two so that the railroad and the fence afforded me some protection from wild animals. After all, it wasn't just cougars out there. There could be bears too. Up and over the fence I went. I pitched my tent. I then covered it in pulled up dead branches of sage brush. This was partially to hide it and partially to provide a bit more of a barrier than a thin tent wall. I cooked up some dehydrated packet food which tasted wonderful given what I'd been through. I changed out of the wet clothes into my spare merino top and my thermal trousers and bedded down for the night. I took out my camp knife and the can of mace to be ready.
 
 It was probably only about 5pm but I wasn't going to be 'outside' as dusk fell so I got in my sleeping bag and closed my tent. I made sure to write in my journal about what had happened. I also added a "next of kin" address into the front of it in case I was eaten during the night. I tried to get some sleep.
