--- a/blog/0030.md
+++ b/blog/0030.md
@@ -13,10 +13,10 @@ On recovering my bike I also found my waterproof jacket and trousers that had se
 
 Once down I packed my tent, clambered up and over the railroad line and found a little service road that I presumed must head out of this valley. I followed it. There were some sections of loose rocks and some patches of the awful sticky mud like yesterday but at least it was on the flat. I may have freaked out a herd of cows at one point who clearly didn't know what to make of a bicycle even if it was on the other side of a fence from them. I did get to see a horned toad on the track. Strangely exciting given that Stevens had [seen some near Winnemucca](http://www.strudel.org.uk/blog/stevens/000023.shtml).
 
-![landscape](https://farm6.staticflickr.com/5232/14193033821_d7cffaa25f_z.jpg Horned toad)
+![landscape](https://farm6.staticflickr.com/5232/14193033821_d7cffaa25f_z.jpg "Horned toad")
 
 After two miles the road headed up over a hill to Palisade ranch. After Stevens' description I half expected [billboard advertisements](http://www.strudel.org.uk/blog/stevens/000028.shtml) to be everywhere but those had long gone. I dunked my bike in the Humboldt to remove the awful mud/rock/sand combination that had covered it over the past 24 hours. Then I had a mile or two of paved road and a stunning view of snow capped mountains beyond. 
 
-![landscape](https://farm8.staticflickr.com/7418/14009683770_e779cb51f8_z.jpg Palisade)
+![landscape](https://farm8.staticflickr.com/7418/14009683770_e779cb51f8_z.jpg "Palisade")
 
 Eight miles later I reached Carlin. I knew it was Carlin because there was a huge white "C" up on the hillside next to it. I trundled into town and straight into the supermarket where I bought $40 of food and gorged on Swedish Fish - not actual fish but sugar filled goodness to bring my energy levels back up. It turned out the motel in Carlin had no room at the inn and my only option was the posh Carlin Inn by the freeway. On seeing my sorry state, the lady at the reception reduced the room rate to $85 for me. One of my most expensive nights of the trip. I ate. I had a bath. I washed my clothes in the bath. I watched some rubbish TV. I slept.
