Add note about Piute and Shoshone.

--- a/blog/0031.md
+++ b/blog/0031.md
@@ -7,7 +7,7 @@ Today was to be a short one. I left Carlin and re-joined the I-80. A few miles o
 
 ![portrait](https://farm6.staticflickr.com/5489/14196319915_b0b58b16f3_c.jpg "California Trail")
 
-After the tunnel I saw a sign for the California Trail Visitor Centre. Not being in any rush I popped in and spent a couple of hours looking at the exhibits. It turned out quite a bit of my route was following the California Trail, albeit in reverse. The inscription outside the centre said:
+After the tunnel I saw a sign for the California Trail Interpretive Centre. Not being in any rush I popped in and spent a couple of hours looking at the exhibits. It turned out quite a bit of my route was following the California Trail, albeit in reverse. The inscription outside the centre said:
 
 > Eastward I go only by force. Westward I go free.
 
@@ -17,7 +17,9 @@ I chatted with the guy at the front desk. He turned out to be from Iowa. It seem
 
 ![landscape](https://farm8.staticflickr.com/7377/14009668128_4ef7a2bfdf_z.jpg Genuine Nevadans)
 
-Part of the exhibition was about "seeing the elephant"; a phrase the emigrants used to describe the difficulties they encountered. It may have derived from the difficulty people had of describing elephants for the first time at travelling fairs. I think I may well have seen at least part of the elephant on this trip.
+Part of the exhibition was about "seeing the elephant"; a phrase the emigrants used to describe the difficulties they encountered. It may have derived from the difficulty people had of describing elephants for the first time at travelling fairs. I think I may well have seen at least part of the elephant on this trip. 
+
+The history of the West sometimes seems to be presented as if nothing existed until the pioneers came through so it was good to see that the exhibition also included a bit about the local Piute and Shoshone tribes.
 
 After my educational break, I headed on to Elko. I stopped at a sign that advertised pasties and ginger beer. I had both. It turned out the lady in the shop was from Canada. She didn't know why Elko had a shop selling English food either. She only worked there.
 
