--- a/blog/0032.md
+++ b/blog/0032.md
@@ -28,3 +28,5 @@ I crossed the railroad where engineering works were taking place and headed into
 As I approached Wells there was a big hill. Over the top of it I was able to coast down into the town. I did have to keep a check on my brakes to stop me exceeding the 35 mph speed limit. 
 
 I headed to the first RV park which thankfully accepted tents. The owner was very kind and came out to my tent to offer me a big steak. As beef is the one thing I don't eat I had to politely decline. Nevadans are proving themselves to be a generous and friendly bunch.
+
+In my tent whilst writing my journal I can hear the rumbling of my ever present companion on this trip; the railroad.
