--- a/blog/0034.md
+++ b/blog/0034.md
@@ -5,6 +5,8 @@ Date:	2014-05-11T19:38:00+PDT
 
 There was no cellphone coverage on my network in Montello but the motel had wifi. The weather forecast was for 24 mph winds. My next stretch to Corinne would be 130 miles and two days away from civilization so I decided I'd be stopping in Montello for a rest day.
 
+![landscape](https://farm8.staticflickr.com/7346/14196339395_57f3057436_z.jpg "View of Pilot Peak from the motel")
+
 Montello is much smaller than it would have been in Stevens' day when it was a busy railroad town. These days it only took about 15 minutes to walk around the three streets of the town. We'd hardly even call it a village back home.
 
 My eye was caught by a colourful yard and taking a closer look I saw amazing "trees" made from glass insulators from the telegraph. A man was pottering around at the side so I asked if it was OK to take pictures. He was called Jerry Tidwell and in the last few years he waas turned into an artist making sculptures using a job lot of insulators he acquired from a friend. He was a wonderful eccentric and showed me around [his work](https://www.youtube.com/watch?v=-jnxEBr8SsY). He told me to come back at 6pm to see it all in better light. I did. Jerry even provided me with a step ladder to get a view from higher up! Such a friendly guy.
