--- a/blog/0034.md
+++ b/blog/0034.md
@@ -3,7 +3,7 @@ Title:	Unexpected art
 Date:	2014-05-11T19:38:00+PDT
 ---
 
-There was no cellphone coverage on my network in Montello but the motel had wifi. The weather forecast was for 24 mph winds. My next stretch to Corinne would be 130 miles and two days away from civilization so I decided I'd be stopping in Montello for a rest day.
+I had no cellphone coverage in Montello but the motel had wifi. The weather forecast was for 24 mph winds. My next stretch to Corinne would be 130 miles and two days away from civilization so I decided to stop in Montello for a rest day.
 
 ![landscape](https://farm8.staticflickr.com/7346/14196339395_57f3057436_z.jpg "View of Pilot Peak from the motel")
 
