--- a/blog/0032.md
+++ b/blog/0032.md
@@ -23,7 +23,7 @@ I crossed the railroad where engineering works were taking place and headed into
 
 ![landscape](https://farm8.staticflickr.com/7422/14196264974_ff1aa37153_z.jpg "Green Nevada")
 
-![portrait](https://farm8.staticflickr.com/7400/14193047771_8ae5277e55_c.jpg Nevada with snow on top")
+![portrait](https://farm8.staticflickr.com/7400/14193047771_8ae5277e55_c.jpg "Nevada with snow on top")
 
 As I approached Wells there was a big hill. Over the top of it I was able to coast down into the town. I did have to keep a check on my brakes to stop me exceeding the 35 mph speed limit. 
 
