Add reference to Elko

--- a/blog/0032.md
+++ b/blog/0032.md
@@ -5,7 +5,7 @@ Date:	2014-05-09T19:00:00+PDT
 
 The family were up early and so was I. Michelle made me breakfast and gave me photocopies of detailed maps into Utah and around the Great Salt Lake.
 
-I headed to __Walmart__ to get long johns. They didn't have any (nobody really knew that term either) but had millions of thermal tops. Apparently nobody gets cold legs around here. I headed over to __Big 5__ where the only option were expensive Under Armour bottoms. Apparently I was at the end of "the season" even if the actual weather didn't quite agree. I needed them as my bivvy bag doesn't breath and leaves my sleeping bag damp with condensation in the morning.
+I headed to the Elko __Walmart__ to get long johns. They didn't have any (nobody really knew that term either) but had millions of thermal tops. Apparently nobody gets cold legs around here. I headed over to __Big 5__ where the only option were expensive Under Armour bottoms. Apparently I was at the end of "the season" even if the actual weather didn't quite agree. I needed them as my bivvy bag doesn't breath and leaves my sleeping bag damp with condensation in the morning.
 
 On leaving Elko I found the last bike shop before Ogden, Utah a hundred or two miles further along the road. I pumped up my tyres whilst I had the chance.
 
