--- a/blog/0035.md
+++ b/blog/0035.md
@@ -29,7 +29,7 @@ It is weird cycling for hours in a straight line with landscape so huge that it 
 
 ![landscape](https://farm8.staticflickr.com/7382/14196309734_7060540d6d_z.jpg "The edge of the Great Salt Lake")
 
-I decided I'd aim for Kelton tonight. It turned out to be further than I thought and I was pretty exhausted when I set up camp. All that remained of Kelton was the graveyard and, possibly the street layout. I pitched my tent where I imagined the hotel had been but now was just empty ground littered with the empty shells from shotguns.
+I decided I'd aim for Kelton tonight. It turned out to be further than I thought and I was pretty exhausted when I set up camp. All that remained of Kelton was the graveyard and, possibly, the street layout. I pitched my tent where I imagined the hotel had been but now was just empty ground littered with the empty shells from shotguns.
 
 ![landscape](https://farm3.staticflickr.com/2900/14009783987_b58abcf9d6_z.jpg "Kelton camp")
 
