--- a/blog/0035.md
+++ b/blog/0035.md
@@ -5,7 +5,7 @@ Date:	2014-05-12T21:00:00+PDT
 
 At this point in the trip Stevens had some advantages over me. He may not have had gears, much in the way of brakes, or panniers, but he did have a railroad town every 10 miles or so where the steam trains could stock up on water. Once the steam trains went, so did most of the towns. I had 130 miles of emptiness ahead of me. My Ikea bag was filled with food and every water container I had was full. My bike was now the heaviest it had been.
 
-The wind had dropped to half what it was yesterday. I had breakfast in the Cowboy Bar then headed off. I followed the road for a while but then headed onto some unpaved roads to get to Tecoma. I wasn't going to see another paved road all day. I saw some great mountains and got a better view of Pilot Peak. Near the state line the sage brush seemed to thin out as if it new we were in a new territory.
+The wind had dropped to half what it was yesterday. I had breakfast in the Cowboy Bar then headed off. I followed the road for a while but then headed onto some unpaved roads to get to Tecoma. I wasn't going to see another paved road all day. I saw some great mountains and got a better view of Pilot Peak. Near the state line the sage brush seemed to thin out as if it knew we were in a new territory.
 
 ![landscape](https://farm8.staticflickr.com/7372/14009757937_da6ca62065_z.jpg "Road from Montello")
 
